# Takoyomi

./: .gitignore  INSTALL.md  LICENSE  README.md  main.py  popup.py  pyproject.toml  requirements.txt  start.sh
.github/workflows/: test.yml
assets/: .gitkeep  n1-translator.desktop  takoyomi.desktop
packaging/: PKGBUILD
scripts/: start.sh
src/n1_translator/: __main__.py  app.py  overlay.py  settings.py
src/takoyomi/: __init__.py  __main__.py  app.py  i18n.py  overlay.py  settings.py
tests/: test_regex.py  test_translator.py
